fixed css to stop navigation from being covered

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -219,3 +219,14 @@ a{
   width: 100%;
   
 }
+
+/* CSS for Profile */
+#profileContainer{
+  position: absolute;
+  top: 12.5%;
+  background-color: #4F4846;
+  width:100%;
+  height: 87.5%;
+  overflow-y: scroll;
+  /* overflow-x: visible; */
+}
